# symbolica

./: Cargo.toml  Contributing.md  License.md  Readme.md  build.rs  pyproject.toml  symbolica.pyi
.github/: .codecov.yml
.github/workflows/: coverage.yml  publish_pypi.yml
examples/: builder.rs  coefficient_ring.rs  collect.rs  derivative.rs  dual.rs  evaluate.rs  evaluator_monitoring.rs  expansion.rs  factorization.rs  fibonacci.rs  fuel_backend.rs  groebner_basis.rs  integration.rs  nested_evaluation.rs  numerical_integration.rs  optimize.rs  optimize_multiple.rs  partial_fraction.rs  partition.rs  pattern_match.rs  pattern_restrictions.rs  polynomial.rs  polynomial_gcd.rs  rational_polynomial.rs  rational_reconstruction.rs  replace_all.rs  replace_once.rs  series.rs  solve_linear_system.rs  streaming.rs  tree_replace.rs  tree_walk.rs  verbose_monitoring.rs
lib/graphica/: Cargo.toml  Contributing.md  License.md  Readme.md
lib/graphica/.github/workflows/: coverage.yml
lib/graphica/src/: lib.rs
lib/numerica/: .gitignore  Cargo.toml  Contributing.md  Readme.md
lib/numerica/.github/workflows/: coverage.yml
lib/numerica/examples/: dual.rs  integration.rs
lib/numerica/src/: combinatorics.rs  domains.rs  lib.rs  numerical_integration.rs  printer.rs  tensors.rs  utils.rs
lib/numerica/src/domains/: dual.rs  finite_field.rs  float.rs  integer.rs  rational.rs
lib/numerica/src/domains/backend/: float.rs  integer.rs
lib/numerica/src/domains/float/: complex.rs  error.rs  field.rs  multiprecision.rs  native.rs  python.rs  rational.rs  simd.rs  tests.rs
lib/numerica/src/tensors/: matrix.rs  sparse.rs
src/: alias.rs  api.rs  atom.rs  coefficient.rs  collect.rs  derivative.rs  domains.rs  evaluate.rs  expand.rs  id.rs  lib.rs  normalize.rs  parser.rs  poly.rs  printer.rs  solve.rs  state.rs  streaming.rs  tensors.rs  transcendental.rs  transformer.rs  utils.rs
src/api/: cpp.rs  mathematica.rs  python.rs
src/api/python/: atom.rs  evaluator.rs  expression.rs  graph.rs  integer.rs  integration.rs  matrix.rs  polynomial.rs  series.rs
src/atom/: coefficient.rs  core.rs  ops.rs  representation.rs
src/domains/: algebraic_number.rs  atom.rs  dual.rs  factorized_rational_polynomial.rs  finite_field.rs  float.rs  integer.rs  rational.rs  rational_polynomial.rs
src/domains/backend/: float.rs  integer.rs
src/domains/float/: complex.rs  double.rs  tests.rs
src/evaluate/: backend.rs  domain.rs  dual.rs  evaluator.rs  export.rs  external.rs  function_map.rs  instruction.rs  optimize.rs  tree.rs
src/poly/: evaluate.rs  factor.rs  gcd.rs  groebner.rs  polynomial.rs  resultant.rs  series.rs  univariate.rs
src/tensors/: matrix.rs  sparse.rs
tests/: evaluation.rs  import_export.rs  pattern_matching.rs  rational_polynomial.rs
