[workspace]
members = ["lib/numerica", "lib/graphica"]
resolver = "3"

[package]
authors = ["Ben Ruijl <ben@symbolica.io>"]
build = "build.rs"
categories = ["science"]
description = "A blazing fast computer algebra system"
edition = "2024"
keywords = ["algebra", "symbolic", "manipulation", "mathematics", "physics"]
license-file = "License.md"
name = "symbolica"
readme = "Readme.md"
repository = "https://github.com/symbolica-dev/symbolica"
rust-version = "1.89"
version = "2.0.0"

[package.metadata.docs.rs]
features = ["python_export", "serde", "bincode", "python_stubgen"]
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3

[profile.dev-optim]
inherits = "dev"
opt-level = 3

[profile.pyodide-debug]
inherits = "dev"
opt-level = 1
debug = 0
incremental = false

[lib]
crate-type = ["lib"]
name = "symbolica"

[features]
default = ["tracing_max_level_info", "faster_alloc", "gmp", "native_code_generation"]
faster_alloc = ["mimalloc"]
gmp = ["dep:rug", "numerica/gmp", "graphica/gmp"]
no_gmp = ["numerica/no_gmp", "graphica/no_gmp"]
wasm = ["no_gmp", "binary_size", "dep:getrandom"]
wasm_api = ["wasm", "dep:wasm-bindgen"]
native_code_generation = ["dep:libloading", "dep:symjit"]
# sort functions based on an argument-by-argument comparison
full_fn_cmp = []
mathematica_api = ["wolfram-library-link"]
# Reduce monomorphized polynomial code in internal modular GCD routines by using
# FiniteField<u64> only instead of compiling both FiniteField<u32> and
# FiniteField<u64> paths.
binary_size = []
# create a Python module
python_api = [
    "pyo3/extension-module",
    "numpy",
    "bincode",
    "pyo3-log",
    "tracing/log",
    "pyo3-stub-gen-derive",
    "numerica/python",
]
# export the Python API
python_export = [
    "pyo3",
    "numpy",
    "bincode",
    "pyo3-stub-gen-derive",
    "numerica/python",
]
# generate stubs for Python API
python_stubgen = ["python_export", "pyo3-stub-gen", "numerica/python_stubgen"]
# build a module that is independent of the specific Python version
python_abi3 = ["pyo3/abi3", "pyo3/abi3-py37"]
tracing_max_level_info = ["tracing/release_max_level_info"]
# import/export objects that do not depend on the state using serde
serde = ["dep:serde", "rug?/serde", "numerica/serde"]
# allow importing/exporting of atoms with a state map using bincode
bincode = ["dep:bincode", "dep:bincode-trait-derive", "numerica/bincode"]

[dependencies.pyo3]
features = ["abi3", "py-clone", "num-complex"]
optional = true
version = "0.28"

[dependencies]
numerica = { version = "2.0", default-features = false }
graphica = { version = "2.0", default-features = false }

ahash = { version = "0.8.7", default-features = false, features = ["std"] }
append-only-vec = "0.1"
bincode = { version = "2.0", optional = true }
brotli = "8.0"
byteorder = "1.5"
bytes = "1.5"
dyn-clone = "1.0"
getrandom = { version = "0.3", optional = true }
inventory = "0.3"
libloading = { version = "0.9", optional = true }
once_cell = "1.19"
rand = "0.9"
pyo3-stub-gen = { version = "0.17", default-features = false, features = [
    "numpy",
], optional = true }
pyo3-stub-gen-derive = { version = "0.17", optional = true }
rayon = "1.8"
rug = { version = "1.27.0", optional = true }
numpy = { version = "0.28", optional = true }
self_cell = "1.2.0"
serde = { version = "1.0", features = ["derive"], optional = true }
smallvec = "1.13"
smartstring = "1.0"
mimalloc = { version = "0.1", optional = true }
tinyjson = "2.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
wide = "1.3"
wasm-bindgen = { version = "0.2", optional = true }
wolfram-library-link = { version = "0.2.9", optional = true }
bincode-trait-derive = { version = "0.1.0", optional = true }
pyo3-log = { version = "0.13", optional = true }
symjit = { version = "=2.18", optional = true }
astro-float = { version = "*"} # FIXME

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.ahash]
version = "0.8.7"
default-features = false
features = ["runtime-rng"]

[target.'cfg(target_arch = "wasm32")'.dependencies.ahash]
version = "0.8.7"
default-features = false
features = ["compile-time-rng"]

[patch.crates-io]
numerica = { path = "lib/numerica" }
graphica = { path = "lib/graphica" }
