[package]
name = "graphica"
authors = ["Ben Ruijl <ben@symbolica.io>"]
version = "2.0.0"
edition = "2024"
license = "MIT"
description = "Open-source multi-edge and mixed directional graph generation and canonization library"
keywords = ["graph", "canonization", "isomorphism", "multi-edge", "directed"]
readme = "Readme.md"
repository = "https://github.com/symbolica-dev/graphica"
rust-version = "1.88"

[features]
default = ["gmp"]
gmp = ["numerica/gmp"]
no_gmp = ["numerica/no_gmp"]
# import/export objects that do not depend on the state using serde
serde = ["dep:serde"]
# allow importing/exporting of atoms with a state map using bincode
bincode = ["dep:bincode", "dep:bincode-trait-derive"]

[dependencies]
ahash = { version = "0.8.7", default-features = false, features = ["std"] }
dyn-clone = "1.0"
rand = "0.9"
serde = { version = "1.0", features = ["derive"], optional = true }
bincode = { version = "2.0", optional = true }
bincode-trait-derive = { version = "0.1.0", optional = true }
numerica = { version = "2.0", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.ahash]
version = "0.8.7"
default-features = false
features = ["runtime-rng"]

[target.'cfg(target_arch = "wasm32")'.dependencies.ahash]
version = "0.8.7"
default-features = false
features = ["compile-time-rng"]
